[gd_scene format=3 uid="uid://dr45ht7q4csbs"]

[ext_resource type="Texture2D" uid="uid://chjl2bvcjm0sm" path="res://TitleStuff/TitleBacking.png" id="2_e8uxl"]
[ext_resource type="Texture2D" uid="uid://bnf5hbmbfo2hl" path="res://TitleStuff/Credits1.png" id="3_5oekq"]
[ext_resource type="Texture2D" uid="uid://5e5yr7rjsvur" path="res://TitleStuff/Credits2.png" id="4_akg42"]
[ext_resource type="Script" uid="uid://ccgiws166y8yq" path="res://TitleStuff/TitleScript.gd" id="5_gbxlg"]
[ext_resource type="Texture2D" uid="uid://dcgghd5qscj30" path="res://TitleStuff/Credits3.png" id="5_ns7e5"]
[ext_resource type="Texture2D" uid="uid://p1tu0lfho808" path="res://TitleStuff/GGJLogo.png" id="6_e8uxl"]
[ext_resource type="Texture2D" uid="uid://ddqsgnn6j6v36" path="res://TitleStuff/Play1.png" id="6_fqkqf"]
[ext_resource type="Texture2D" uid="uid://1oe83sbgxs1v" path="res://TitleStuff/Play2.png" id="7_5adf0"]
[ext_resource type="Texture2D" uid="uid://dqfulikxjlnjg" path="res://TitleStuff/IGDATC.png" id="7_ekx28"]
[ext_resource type="Texture2D" uid="uid://bslhfl213nyt" path="res://TitleStuff/TitleMasqafe.png" id="8_ekx28"]
[ext_resource type="Texture2D" uid="uid://cpi8rt2n3e4hj" path="res://TitleStuff/Play3.png" id="8_kdq0o"]
[ext_resource type="Texture2D" uid="uid://fivi4m4uce4g" path="res://TitleStuff/Quit1.png" id="9_foyq7"]
[ext_resource type="AudioStream" uid="uid://lvlibtlksnlv" path="res://Audio/Masqafe Menu Theme.mp3" id="9_gbxlg"]
[ext_resource type="Texture2D" uid="uid://b2nw0n34r7m5i" path="res://TitleStuff/Quit2.png" id="10_udbpe"]
[ext_resource type="Texture2D" uid="uid://bin8jtjmka2ff" path="res://TitleStuff/Quit3.png" id="11_r86d6"]

[sub_resource type="LabelSettings" id="LabelSettings_ctgh8"]
font_size = 35
font_color = Color(0.08221086, 0.036244255, 0, 1)

[node name="GameTitle" type="Control" unique_id=146038311]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_gbxlg")

[node name="Background" type="TextureRect" parent="." unique_id=439593961]
layout_mode = 0
offset_left = -27.0
offset_top = -79.0
offset_right = 1315.2223
offset_bottom = 676.0
texture = ExtResource("2_e8uxl")
expand_mode = 3

[node name="subtitle" type="Label" parent="." unique_id=1736155271]
layout_mode = 0
offset_left = 143.0
offset_top = 201.0
offset_right = 1053.0
offset_bottom = 292.0
text = "minimum moves to party"
label_settings = SubResource("LabelSettings_ctgh8")
horizontal_alignment = 1

[node name="example text panel" type="Panel" parent="." unique_id=646997688]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -371.0
offset_right = 201.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "dialog goes in here"

[node name="Credits" type="TextureButton" parent="example text panel" unique_id=860536252]
layout_mode = 0
offset_left = 48.0
offset_top = 129.0
offset_right = 364.0
offset_bottom = 212.0
texture_normal = ExtResource("3_5oekq")
texture_pressed = ExtResource("4_akg42")
texture_hover = ExtResource("5_ns7e5")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="Playbutton" type="TextureButton" parent="example text panel" unique_id=531080555]
layout_mode = 0
offset_left = 48.0
offset_top = 32.0
offset_right = 364.0
offset_bottom = 115.0
texture_normal = ExtResource("6_fqkqf")
texture_pressed = ExtResource("7_5adf0")
texture_hover = ExtResource("8_kdq0o")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="Quit" type="TextureButton" parent="example text panel" unique_id=1973591783]
layout_mode = 0
offset_left = 48.0
offset_top = 228.0
offset_right = 364.0
offset_bottom = 311.0
texture_normal = ExtResource("9_foyq7")
texture_pressed = ExtResource("10_udbpe")
texture_hover = ExtResource("11_r86d6")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="GgjLogo" type="Sprite2D" parent="." unique_id=144482976]
position = Vector2(73, 603)
scale = Vector2(0.10263161, 0.10263161)
texture = ExtResource("6_e8uxl")

[node name="Igdatc2" type="Sprite2D" parent="." unique_id=358114897]
position = Vector2(1105, 592)
scale = Vector2(0.39142856, 0.39142856)
texture = ExtResource("7_ekx28")

[node name="TitleMasqafe" type="Sprite2D" parent="." unique_id=350260151]
position = Vector2(563, 257)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ekx28")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1393763866]
stream = ExtResource("9_gbxlg")
autoplay = true

[connection signal="pressed" from="example text panel/Credits" to="." method="CreditsButton"]
[connection signal="pressed" from="example text panel/Playbutton" to="." method="PlayGameButton"]
[connection signal="pressed" from="example text panel/Quit" to="." method="QuitButton"]
